--- a/MyDiary/app/src/main/res/layout/layout_picture_selector.xml
+++ b/MyDiary/app/src/main/res/layout/layout_picture_selector.xml
@@ -12,16 +12,18 @@
         android:layout_alignParentBottom="true"
         android:background="#444"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="20dp">
 
         <Button
             android:id="@+id/picture_selector_take_photo_btn"
-            android:backgroundTint="#F96060"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dip"
+            android:background="@drawable/standard_button_bg"
+            android:backgroundTint="#FDC439"
             android:padding="10dp"
             android:text="Take Picture"
             android:textColor="#fff"
@@ -33,9 +35,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="10dip"
-            android:backgroundTint="#F96060"
+            android:background="@drawable/standard_button_bg"
+            android:backgroundTint="#FDC439"
             android:padding="10dp"
             android:text="Select from album"
             android:textColor="#fff"
@@ -46,11 +49,12 @@
             android:id="@+id/picture_selector_cancel_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dip"
             android:layout_marginLeft="10dip"
-            android:layout_marginRight="10dip"
             android:layout_marginTop="20dp"
-            android:background="@android:color/white"
+            android:layout_marginRight="10dip"
+            android:layout_marginBottom="15dip"
+            android:background="@drawable/standard_button_bg"
+            android:backgroundTint="#fff"
             android:padding="10dp"
             android:text="cancel"
             android:textColor="#373447"
