--- a/MyDiary/app/src/main/res/layout/activity_diaryhome.xml
+++ b/MyDiary/app/src/main/res/layout/activity_diaryhome.xml
@@ -6,9 +6,8 @@
     android:id="@+id/main_rl_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="#FDC439"
     android:orientation="vertical"
-    android:paddingBottom="10dp"
     tools:context=".ui.DiaryHomeActivity"
     >
 
@@ -17,34 +16,41 @@
         android:id="@+id/main_ll_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
-        <include
-            layout="@layout/part_common_title"
-            />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="20dp"/>
+        <include layout="@layout/part_common_title" />
+
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                      android:id="@+id/item_first"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:background="#ffffff"
-                      android:orientation="vertical"
-                      android:paddingRight="10dp"
-            >
+            android:id="@+id/item_first"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/card_background"
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:paddingTop="20dp"
+            android:paddingRight="10dp">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical"
+                android:text="All Diary"
+                android:textColor="#FDC439"
+                android:textSize="35dp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:background="#ffffff"
                 android:orientation="horizontal"
-                android:paddingLeft="10.8dp"
-                >
+                android:paddingLeft="10.8dp">
 
                 <ImageView
                     android:id="@+id/main_iv_circle"
@@ -52,8 +58,7 @@
                     android:layout_height="22dp"
                     android:layout_gravity="center_vertical"
                     android:paddingTop="2dp"
-                    android:src="@drawable/circle_orange"
-                    />
+                    android:src="@drawable/circle_orange" />
 
                 <TextView
                     android:id="@+id/main_tv_date"
@@ -64,8 +69,7 @@
                     android:paddingLeft="4dp"
                     android:paddingTop="5dp"
                     android:text="Today, January 1, 2021"
-                    android:textSize="14sp"
-                    />
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
@@ -73,22 +77,19 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="23dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/linear_style"
-                    >
-                </LinearLayout>
+                    android:background="@drawable/linear_style"></LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/item_ll_control"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/main_tv_content"
@@ -97,12 +98,11 @@
                         android:background="#ffffff"
                         android:lineSpacingExtra="4dp"
                         android:paddingLeft="33dp"
-                        android:paddingRight="15dp"
                         android:paddingTop="5dp"
+                        android:paddingRight="15dp"
                         android:text="Today, you wrote nothing..."
                         android:textColor="@color/gray"
-                        android:textSize="16sp"
-                        />
+                        android:textSize="16sp" />
 
                 </LinearLayout>
 
@@ -115,7 +115,7 @@
             android:id="@+id/main_rv_show_diary"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            >
+            android:background="#fff">
 
         </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
@@ -129,7 +129,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="30dp"
         android:src="@drawable/add"
         app:backgroundTint="#F96060"
         app:borderWidth="0dp"
