--- a/MyDiary/app/src/main/res/layout/activity_login.xml
+++ b/MyDiary/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
         android:layout_width="300dp"
         android:layout_height="70dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="#F96060"
+        android:backgroundTint="#FDC439"
         android:gravity="center"
         android:text="Login"
         android:textAlignment="center"
@@ -88,7 +88,7 @@
         android:backgroundTint="#ffffff"
         android:background="@drawable/standard_button_bg"
         android:text="Signup"
-        android:textColor="#F96060"
+        android:textColor="#FDC439"
         android:textSize="26sp"
         android:textStyle="bold"
         android:textAlignment="center"
