--- a/MyDiary/app/src/main/res/layout/activity_signup.xml
+++ b/MyDiary/app/src/main/res/layout/activity_signup.xml
@@ -82,7 +82,7 @@
         android:layout_width="300dp"
         android:layout_height="70dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="#F96060"
+        android:backgroundTint="#FDC439"
         android:background="@drawable/standard_button_bg"
         android:text="Register"
         android:textColor="#ffffff"
