--- a/MyDiary/app/src/main/res/layout/adapter_voice.xml
+++ b/MyDiary/app/src/main/res/layout/adapter_voice.xml
@@ -16,7 +16,9 @@
         android:gravity="left"
         android:orientation="vertical"
         android:paddingEnd="5dp"
-        android:paddingRight="5dp">
+        android:paddingRight="5dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp">
 
         <TextView
             android:id="@+id/voice_time"
