--- a/MyDiary/app/src/main/res/layout/part_common_title.xml
+++ b/MyDiary/app/src/main/res/layout/part_common_title.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/common_title_ll"
-              android:background="#00000000"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/common_title_ll"
+              android:background="@drawable/add_back"
               android:layout_width="match_parent"
-              android:layout_height="45dp"
+              android:layout_height="270dp"
               android:orientation="horizontal">
 
     <ImageView
@@ -11,20 +12,20 @@
         android:paddingLeft="5dp"
         android:layout_width="50dp"
         android:layout_height="40dp"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/icon_arrow_arrow_left"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/ic_arrow_back_black_24dp"
         />
 
     <TextView
         android:id="@+id/common_tv_title"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="Add Diary"
-        android:textColor="#000000"
-        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center_vertical"
+        android:text="All Diary"
+        android:textColor="#FDC439"
+        android:textSize="35dp"
         android:textStyle="bold" />
 
     <ImageView
