--- a/MyDiary/app/src/main/res/layout/activity_voice_memo.xml
+++ b/MyDiary/app/src/main/res/layout/activity_voice_memo.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+
+    <LinearLayout
+        android:id="@+id/main_area"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include layout="@layout/toolbar_layout" />
+    
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/msgList"
@@ -27,6 +37,8 @@
         android:padding="10dp"
         android:layout_marginTop="10dp" />
 
+    </LinearLayout>
 
 
-</LinearLayout>
+
+</RelativeLayout>
