--- a/MyDiary/app/src/main/res/layout/activity_main.xml
+++ b/MyDiary/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,16 @@
         app:fab_title="FAB ADD" />
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+
         <TextView
             android:id="@+id/welcome1"
             android:layout_width="wrap_content"
@@ -182,77 +192,47 @@
             </HorizontalScrollView>
         </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/story_card"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="10dp"
-        android:paddingBottom="20dp"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="2dp">
-
-        <TextView
-            android:id="@+id/shot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
-            android:text="Best moment this week"
-            android:textColor="#000"
-            android:textSize="20dp" />
-
-        <RelativeLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginTop="55dp">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/story_card"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:paddingBottom="20dp"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="2dp">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/shot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="15dp"
+                android:text="Best moment this week"
+                android:textColor="#000"
+                android:textSize="20dp" />
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:orientation="horizontal">
-
-                <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/imageView1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="5dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/temp1"
-                    app:riv_border_color="#00000000"
-                    app:riv_border_width="3dip"
-                    app:riv_corner_radius_bottom_left="20dp"
-                    app:riv_corner_radius_bottom_right="20dp"
-                    app:riv_corner_radius_top_left="20dp"
-                    app:riv_corner_radius_top_right="20dp"
-                    app:riv_mutate_background="false"
-                    app:riv_oval="false"
-                    app:riv_tile_mode="clamp" />
+                android:layout_height="300dp"
+                android:layout_marginTop="55dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="10dp">
+                    android:layout_marginBottom="10dp"
+                    android:orientation="horizontal">
 
-                    <com.makeramen.roundedimageview.RoundedImageView
-                        android:id="@+id/imageView2"
+                    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/imageView1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
                         android:layout_weight="1"
-                        android:paddingBottom="5dp"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="5dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/temp2"
+                        android:src="@drawable/temp1"
                         app:riv_border_color="#00000000"
                         app:riv_border_width="3dip"
                         app:riv_corner_radius_bottom_left="20dp"
@@ -267,35 +247,22 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:orientation="horizontal"
-                        android:paddingTop="5dp">
-
-                        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                            android:id="@+id/imageView3"
-                            android:layout_width="100dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:paddingRight="5dp"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/temp3"
-                            app:riv_border_color="#00000000"
-                            app:riv_border_width="3dip"
-                            app:riv_corner_radius_bottom_left="20dp"
-                            app:riv_corner_radius_bottom_right="20dp"
-                            app:riv_corner_radius_top_left="20dp"
-                            app:riv_corner_radius_top_right="20dp"
-                            app:riv_mutate_background="false"
-                            app:riv_oval="false"
-                            app:riv_tile_mode="clamp" />
+                        android:orientation="vertical"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="10dp">
 
                         <com.makeramen.roundedimageview.RoundedImageView
-                            android:id="@+id/imageView4"
-                            android:layout_width="70dp"
+                            android:id="@+id/imageView2"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentRight="true"
                             android:layout_weight="1"
-                            android:paddingLeft="5dp"
-                            android:scaleType="center"
-                            android:src="@drawable/temp1"
+                            android:paddingBottom="5dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/temp2"
                             app:riv_border_color="#00000000"
                             app:riv_border_width="3dip"
                             app:riv_corner_radius_bottom_left="20dp"
@@ -306,10 +273,54 @@
                             app:riv_oval="false"
                             app:riv_tile_mode="clamp" />
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="horizontal"
+                            android:paddingTop="5dp">
+
+                            <com.makeramen.roundedimageview.RoundedImageView
+                                android:id="@+id/imageView3"
+                                android:layout_width="100dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:paddingRight="5dp"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/temp3"
+                                app:riv_border_color="#00000000"
+                                app:riv_border_width="3dip"
+                                app:riv_corner_radius_bottom_left="20dp"
+                                app:riv_corner_radius_bottom_right="20dp"
+                                app:riv_corner_radius_top_left="20dp"
+                                app:riv_corner_radius_top_right="20dp"
+                                app:riv_mutate_background="false"
+                                app:riv_oval="false"
+                                app:riv_tile_mode="clamp" />
+
+                            <com.makeramen.roundedimageview.RoundedImageView
+                                android:id="@+id/imageView4"
+                                android:layout_width="70dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:paddingLeft="5dp"
+                                android:scaleType="center"
+                                android:src="@drawable/temp1"
+                                app:riv_border_color="#00000000"
+                                app:riv_border_width="3dip"
+                                app:riv_corner_radius_bottom_left="20dp"
+                                app:riv_corner_radius_bottom_right="20dp"
+                                app:riv_corner_radius_top_left="20dp"
+                                app:riv_corner_radius_top_right="20dp"
+                                app:riv_mutate_background="false"
+                                app:riv_oval="false"
+                                app:riv_tile_mode="clamp" />
+
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+    </ScrollView>
 </RelativeLayout>
 
