Change colorAccent to orange

--- a/MyDiary/app/src/main/res/values/colors.xml
+++ b/MyDiary/app/src/main/res/values/colors.xml
@@ -2,10 +2,7 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-<!--    <color name="colorPrimary">#3F51B5</color>-->
-<!--    <color name="colorPrimaryDark">#303F9F</color>-->
-<!--    <color name="colorAccent">#FF4081</color>-->
+    <color name="colorAccent">#FDC439</color>
     <color name="gray">#bbafb4</color>
     <color name="black">#343232</color>
     <color name="black_semi_transparent">#B2000000</color>
